--- a/static/styles/forms.css
+++ b/static/styles/forms.css
@@ -1,16 +1,3 @@
-/* Set the size of the map and form container */
-#map-container {
-    display: flex;
-    height: 100vh;
-    position: relative;
-}
-
-#map {
-    flex: 1;
-    position: relative;
-    z-index: 1; /* Ensure the map doesn't cover other elements */
-}
-
 #form-container {
     width: 350px;
     padding: 20px;
@@ -29,6 +16,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    margin-top: 6vh;
 }
 
 .tab {
@@ -101,6 +89,8 @@
     border: 1px solid #e0e0e0;
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    max-height: 400px; /* Adjust height as needed */
+    overflow-y: auto;  /* Adds scrollbar when content overflows */
 }
 
 #form-lower h3 {
@@ -127,63 +117,4 @@
 
 #form-lower ul li {
     margin-bottom: 5px;
-}
-
-/* Styling for the add marker at view button */
-#add-marker-view-btn {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000; /* Ensure the button is above the map */
-}
-
-#add-marker-view-btn:hover {
-    background-color: #0056b3;
-}
-
-body {
-    margin: 0;
-    overflow: hidden;
-}
-
-#refresh-btn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    font-size: 16px;
-    z-index: 1000; /* Ensure the button is above the map */
-}
-
-#refresh-btn:hover {
-    background-color: #0056b3;
-}
-
-#calculate-btn {
-    padding: 10px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 10px;
-    display: block;
-    width: 100%;
-}
-
-#calculate-btn:hover {
-    background-color: #0056b3;
 }
