--- a/static/styles/forms.css
+++ b/static/styles/forms.css
@@ -16,32 +16,46 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    margin-top: 6vh;
+    margin-top: 5vh;
+}
+
+.tablinks {
+    font-size: 16px;
 }
 
 .tab {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     background-color: #f1f1f1;
-    border-radius: 8px 8px 0 0;
+    border-radius: 15px 15px 0 0;
     overflow: hidden;
 }
 
 .tab button {
-    background-color: #f1f1f1;
-    border: none;
+    background-color: transparent;
     outline: none;
     padding: 10px 20px;
     cursor: pointer;
     transition: 0.3s;
     border: 1px solid #ddd;
+    flex: 1;
+    text-align: center;
+}
+
+#left {
+    border-radius: 15px 0 0 0;
+}
+
+#right {
+    border-radius: 0 15px 0 0;
 }
 
 .tab button.active {
     background-color: #007bff;
-    color: white;
     border-bottom: 2px solid #007bff;
+    border: none;
+    color: white;
 }
 
 .tabcontent {
@@ -50,6 +64,7 @@
     border: 1px solid #ddd;
     border-radius: 0 0 8px 8px;
     padding: 15px;
+    font-size: 20px;
 }
 
 .tabcontent form {
@@ -117,4 +132,109 @@
 
 #form-lower ul li {
     margin-bottom: 5px;
+}
+
+
+@media screen and (max-width: 999px) {
+    #form-container {
+        position: fixed; /* Fix to the bottom of the screen */
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: auto; /* Adjust height to fit content */
+        border-left: none;
+        border-radius: 0;
+        box-shadow: none;
+        z-index: 2; /* Ensure it is above the map */
+        background-color: transparent;
+        padding:0;
+    }
+
+    #form-upper {
+        margin: 0;
+    }
+
+    #latlng-form {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* Two columns, each taking up 1 fraction of the available space */
+        gap: 30px; /* Space between the columns */
+        align-items: center;
+    }
+
+    #address-form {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* Two columns, each taking up 1 fraction of the available space */
+        gap: 30px; /* Space between the columns */
+        align-items: center;
+    }
+
+    .tabcontent {
+        font-size: 15px;
+    }
+
+    .form-group {
+        display: flex;
+        grid-column: span 1;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+    }
+
+    .form-group-2 {
+        display: flex;
+        flex-direction: column;
+        grid-column: span 2;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+    }
+
+    #latlng-form label {
+        margin-bottom: 5px; /* Space between the label and input */
+    }
+    
+    #latlng-form input {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        width: 80%
+    }
+
+    #address-form input {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        width: 80%
+    }
+
+    #form-lower {
+        display: none; /* Hide this section on mobile */
+    }
+
+    #Info {
+        overflow-y: auto;
+        max-height: 80px;
+    }
+
+    .tablinks {
+        font-size: 14px;
+    }
+
+    .tabcontent {
+        padding-top: 5px;
+        padding-bottom: 50px;
+        height: 80px; 
+        border-radius: 0 0 0px 0px;
+    }
+
+    .add-marker {
+        width: 60px;               /* Takes full width of the parent container */
+        height: 60px;
+        font-size: 45px;
+        display: inline-flex;          /* Enables flexbox layout for the button */
+        align-items: center;           /* Vertically centers the text */
+        justify-content: center;
+    }
+
 }
