--- a/templates/temp.html
+++ b/templates/temp.html
@@ -24,47 +24,39 @@
         <!-- Upper Section: Tabs and Marker Addition -->
         <div id="form-upper">
             <div class="tab">
-                <button class="tablinks" onclick="openTab(event, 'InfoTab')" id="left">Info</button>
+                <button class="tablinks" onclick="openTab(event, 'InfoTab')" id="defaultOpen">Info</button>
                 <button class="tablinks" onclick="openTab(event, 'LatLngTab')">By Latitude/Longitude</button>
-                <button class="tablinks" onclick="openTab(event, 'AddressTab')" id="right">By Address</button>
+                <button class="tablinks" onclick="openTab(event, 'AddressTab')">By Address</button>
             </div>
             <!-- Tab content -->
             <div id="InfoTab" class="tabcontent">
-                <div id="Info">
                 <p>This app will let you calculate the geographical centre of N locations, trying to find the point of equidistance between each point.</p>
 
                 <p>We can calculate the exact centres for 2 and 3 locations, but for anything more it will approximate the point of minimum variance through stochastic gradient descent.</p>
-                </div>
             </div>
     
             <div id="LatLngTab" class="tabcontent">
                 <form id="latlng-form">
-                    <div class="form-group">
+                    <div id="lat">
                     <label for="latitude">Latitude:</label>
                     <input type="number" id="latitude" step="0.000001" required>
                     </div>
 
-                    <div class="form-group">
+                    <div id="lat">
                     <label for="longitude">Longitude:</label>
                     <input type="number" id="longitude" step="0.000001" required>
                     </div>
-
-                    <div class="form-group">
-                    <button type="submit" class="add-marker">Add Marker</button>
-                    </div>
+                    <button type="submit">Add Marker</button>
                 </form>
                 
             </div>
     
             <div id="AddressTab" class="tabcontent">
                 <form id="address-form">
-                    <div class="form-group-2">
                     <label for="address">Address:</label>
                     <input type="text" id="address" required>
-                    </div>
-                    <div class="form-group">
-                    <button type="submit" class="add-marker">Add Marker</button>
-                    </div>
+                    <br>
+                    <button type="submit">Geocode & Add Marker</button>
                 </form>
             </div>
         </div>
@@ -80,7 +72,7 @@
         
 
     <!-- Button for adding marker at the map center -->
-    <button id="add-marker-view-btn" class="add-marker" onclick="addMarkerAtView()">Add Marker</button>
+    <button id="add-marker-view-btn" onclick="addMarkerAtView()">Add Marker at Map Center</button>
 
         <!-- Add the settings button in the top right corner -->
     <button id="settings-btn" onclick="toggleSettingsPanel()">
