--- a/templates/geo.html
+++ b/templates/geo.html
@@ -116,6 +116,7 @@
     </div>
     
     <!-- Leaflet JS -->
+    <script>console.log("hey baby gitrl");</script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <!-- Add Geocoding plugin -->
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
